Fix Focus text alignment - center the h1 element

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
     font-size: 2.1em;
     font-family: 'Bungee Shade';
     text-align: center;
+    display: block;
+    width: 100%;
+    margin: 0 auto;
   }
 
   .icons {
